[package]
name = "burneroutlook"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
yew-hooks = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["HtmlSelectElement", "Window", "Navigator", "Clipboard"] }
gloo-timers = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.64"
reqwest = { version = "0.11", features = ["json"] }
num-format = "0.4.0"